@@ -34,3 +34,5 @@
 
         * Remove global log domain and make all files define log domain
           before including efreet_private.h
+        * Remove efreet_xml_{init,shutdown}() from efreet_menu.c, it is done
+          in efreet_init()
